--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
             <version>1.9.11</version>
         </dependency>
  		
+		<!--  -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.4</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind --> 		
 		 <dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
